[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaspflow"
version = "0.1.0"
description = "VASP calculation workflow automation scripts"
dependencies = [
    "toml",
    "numpy",
    "pymatgen",
]

[project.scripts]
vasp_scf = "scf.vasp_scf:main"
vasp_eband = "eband.vasp_eband:main"
vasp_eledos = "eledos.vasp_eledos:main"
vasp_fermisurface = "fermisurface.vasp_fermisurface:main"
vasp_cohp = "cohp.vasp_cohp:main"
vasp_process_cohp = "cohp.vasp_process_cohp:main"

[tool.setuptools]
packages = ["scf", "eband", "eledos", "fermisurface", "cohp"]
